--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ section {
 	color: #fff;	/*文字色*/
 }
 #section1::before {
-	background: url('../images/section1.jpg') no-repeat center center / cover;	/*背景画像の読み込み*/
+	background: url('../images/section1_origin.jpg') no-repeat center center / cover;	/*背景画像の読み込み*/
 }
 
 /*section2の設定*/
@@ -366,7 +366,7 @@ section {
 	@media (orientation: portrait) {
 
 	#section1::before {
-		background-image: url('../images/section1_portrait.jpg');
+		background-image: url('../images/section1_origin.jpg');
 	}
 	#section2::before {
 		background-image: url('../images/section2_portrait.jpg');
